fix grid gap on courses grid

--- a/CSS/components/courses-grid.css
+++ b/CSS/components/courses-grid.css
@@ -11,17 +11,18 @@
     color: var(--text-main);
     font-family: var(--font-c9e);
     margin: 0 auto;
-    padding: 20px 0 26px 20px;
+    padding: 23px 0 31px 20px;
     max-width: 963px;
 }
 
 .courses-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px;
+    gap: 40px;
     max-width: 980px;
     margin: 0 auto;
     padding-bottom: 44px;
+    row-gap: 20px;
 }
 
 .card {
